--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,3 @@
-<div class="flex justify-content-end">
-    <p>Développer par : <em>Edouard DA SILVA</em></p>
+<div class="flex mt-3 mb-1 mx-2">
+    <p class="text-end m-0">Développer par : <em>Edouard DA SILVA</em></p>
 </div>
