--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -9,7 +9,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('home') }}">Accueil</a>
+                    <a class="nav-link {{ app.current_route == 'home' ? 'active' : ''}} "
+                       href="{{ path('home') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {{ app.current_route starts with 'customers.' ? 'active' : '' }}"
+                       href="{{ path('customers.index') }}">Customer</a>
                 </li>
 
             </ul>
