--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -20,9 +20,9 @@
             <table class="table table-sm align-middle">
                 <thead class="table-light">
                 <tr>
-                    <th>Name</th>
+                    <th>{{ knp_pagination_sortable(customers,'Name','c.name') }}</th>
                     <th>Phone</th>
-                    <th>City</th>
+                    <th>{{ knp_pagination_sortable(customers,'City','c.city') }}</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -59,5 +59,6 @@
                 </tbody>
             </table>
         </div>
+        {{ knp_pagination_render(customers) }}
     </div>
 {% endblock %}
